# GoldenEye-Recomp-rexglue

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: rexglue_helpers.cmake
examples/secondary_ui/: CMakeLists.txt  README.md  secondary_ui_demo.cpp  secondary_ui_demo.h
include/rex/: platform.h  platform_android_jni.h  thread.h
include/rex/audio/: audio_system.h  conversion.h
include/rex/chrono/: chrono.h
include/rex/perf/: counter.h
include/rex/system/: mmio_handler.h
include/rex/thread/: fiber.h
include/rex/ui/: android_input_sink.h  external_window.h  secondary_ui_surface.h  surface_android.h  virtual_key.h  window.h  window_android.h  window_gtk.h  window_win.h  windowed_app.h  windowed_app_context_android.h
src/audio/: CMakeLists.txt  audio_system.cpp  xma_context.cpp  xma_decoder.cpp
src/audio/android/: android_audio_driver.cpp  android_audio_system.cpp
src/core/: CMakeLists.txt  fiber_android_arm64.S  fiber_posix.cpp  filesystem.cpp  memory_posix.cpp  platform_android_jni.cpp  threading.cpp  threading_posix.cpp  threading_win.cpp
src/core/perf/: counter.cpp
src/filesystem/: virtual_file_system.cpp
src/graphics/: command_processor.cpp  graphics_system.cpp
src/graphics/vulkan/: command_processor.cpp  pipeline_cache.cpp  render_target_cache.cpp  shared_memory.cpp  texture_cache.cpp
src/input/: CMakeLists.txt  input_system.cpp
src/input/android/: android_input_driver.cpp
src/input/mnk/: mnk_input_driver.cpp
src/kernel/xam/: ge_online_protocol.h  xam_net.cpp
src/kernel/xboxkrnl/: xboxkrnl_audio.cpp  xboxkrnl_threading.cpp  xboxkrnl_video.cpp
src/system/: mmio_handler.cpp  runtime.cpp  xsocket.cpp  xthread.cpp
src/ui/: CMakeLists.txt  external_window.cpp  keybinds.cpp  presenter.cpp  rex_app.cpp  secondary_ui_surface.cpp  surface_android.cpp  window.cpp  window_android.cpp  window_gtk.cpp  window_win.cpp  windowed_app_context_android.cpp  windowed_app_main_android.cpp
(+12 files in other folders)
